--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>api html get access</title>
 
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
   <h1>Products</h1>
@@ -36,7 +33,7 @@
       <button type="submit">Save</button>
     </div>
   </form>
-
+  
   <script src="js/main.js"></script>
 </body>
 </html>
