move add form to modal and activete when clicking on button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul class="product-list"></ul>
   </section>
   
-  <div class="modal-wrapper hidden">
+  <div class="modal-wrapper hidden" id="addItemModal">
     <div class="product-modal">
       <form id="addForm" >
         <h2 class="section-title">Add product</h2>
