--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <div class="modal-wrapper hidden">
+  <div class="modal-wrapper hidden" id="editItemModal">
     <div id='edit-section' class="product-modal">
       <form id="editForm">
       <h2 class="section-title">Edit product</h2>
