add cancel button on add and edit forms

--- a/index.html
+++ b/index.html
@@ -24,18 +24,19 @@
         <h2 class="section-title">Add product</h2>
         <div class="input-wrapper">
           <label for="name">Name: </label>
-          <input type="text" name="name" id="name" required>
+          <input type="text" name="name" id="name" >
         </div>
         <div class="input-wrapper">
           <label for="brand">Brand: </label>
-          <input type="text" name="brand" id="brand" required>
+          <input type="text" name="brand" id="brand" >
         </div>
         <div class="input-wrapper">
           <label for="price">Price: </label>
-          <input type="text" name="price" id="price" required>
+          <input type="text" name="price" id="price" >
         </div>
         <div>
-          <button type="submit">Save</button>
+          <button class="form-btn" type="submit">Save</button>
+          <button class="form-btn cancel-btn">Cancel</button>
         </div>
       </form>
     </div>
@@ -48,18 +49,19 @@
       <input type="hidden" name="id">
       <div class="input-wrapper">
         <label for="name">Name: </label>
-        <input type="text" name="name" id="name" required>
+        <input type="text" name="name" id="name" >
       </div>
       <div class="input-wrapper">
         <label for="brand">Brand: </label>
-        <input type="text" name="brand" id="brand" required>
+        <input type="text" name="brand" id="brand" >
       </div>
       <div class="input-wrapper">
         <label for="price">Price: </label>
-        <input type="text" name="price" id="price" required>
+        <input type="text" name="price" id="price" >
       </div>
       <div>
-        <button type="submit">Save</button>
+        <button class="form-btn" type="submit">Save</button>
+        <button class="form-btn cancel-btn">Cancel</button>
       </div>
     </form>
     </div>
